syntax = "proto3";

package cps.model.v1.custom.uvk5;

message UVK5ChannelCustomParams {
    optional bool is_scanlist1 = 1;
    optional bool is_scanlist2 = 2;
    optional bool bclo = 3;
    optional bool frequency_reverse = 4;
    optional uint32 scrambler = 5;
    optional bool is_dtmf = 6;
    optional uint32 dtmf_ptt_id = 7;
}